--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-management.endpoints.web.exposure.include=prometheus        # A config param for exposing metrics in prometheus structure
-servers=Alfa,Bravo,Charlie,Delta,Echo                       # Comma separated String of server hostnames
-time.to.wait.for.a.single.server.response.milliseconds=5000 # The amount of time required to wait for one post call to return
+# A config param for exposing metrics in prometheus structure
+management.endpoints.web.exposure.include=prometheus
+# Comma separated String of server hostnames
+servers=Alfa,Bravo,Charlie,Delta,Echo
+# The amount of time required to wait for one post call to return
+time.to.wait.for.a.single.server.response.milliseconds=5000
 management.metrics.enable.all=true
